Made updates to the swagger tags for uniformity on the api-doc extension
